# opuas

./: CMakeLists.txt  README.md
src/: CodeGenerator.cpp  OpuAssembler.cpp  OpuAssembler.h  OpuDisassembler.cpp  OpuDisassembler.h  Parser.cpp  Validator.cpp  Validator.h  main.cpp  utils.cpp  utils.h
src/algorithms/: RegisterAllocator.cpp  StallSetter.cpp
src/elf/: ElfObjectReader.cpp  ElfObjectWriter.cpp
test/: run_test.sh  test_simple.asm
